Bug 835715: #undef LOG at the top of nsJARChannel.cpp to fix build warning about it being (re)defined later on. r=jduell